[project]
name = "leetcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Steffen",email = "a.steffen@babelberg.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
paths = [
    "pathlib2 (>=2.2,<3.0) ; sys_platform == 'x86'"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
